# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.1.7]
- Reorder badges in README and update label.
- Fix to point to hcli_hc circleci status in README.

## [0.1.6]
- Update to do in README.

## [0.1.5]
- Fix README to use different badging URLs.

## [0.1.4]
- Cleanup to remove useless information in README documentation.

## [0.1.3]
- Fix invalid rst README causing badge to fail displaying properly.

## [0.1.2]
- Fix missing template.json.

## [0.1.1]
- Fix to properly include hcli_hc data for man pages.

## [0.1.0]
- Moved out of hcli_core's sample hcli applications for independent development.
- The historical hcli_core changelog is retained below for context but with a sharp break and restart of versioning from here on out.

## [0.18.1]
- Fix mishandling of a disconnect exception and direct service interaction with the serial device.
- Fix nudger termination edge case.
- Fix to isolate the controler realtime loop to a single thread.
- Fix streamer termination check and reset logic to avoid realtime queue pickup during reset.

## [0.18.0]
- Redesign to a controller model to improve the stability of GRBL flow control.

## [0.17.0]
- Add hc logs to poll a log tail when access to server log stdout isn't available (single client polling only).
- Add hc jobs server log output and consolidate log reversal and log output into the jobs service.
- Add hc connect (without parameter) to try and auto connect to scanned serial ports, and stops at the first GRBL controller found.
- Modify log output to retain space between gcode commands for readability.
- Fix to avoid streaming empty lines from gcode files to avoid unexpected streamer code repetition.
- Fix to remove both line feeds and carriage returns correctly when processing gcode files.

## [0.16.0]